--- a/src/static/css/registration.css
+++ b/src/static/css/registration.css
@@ -81,8 +81,17 @@ input[type = "email"]{
   border-radius: 4px;
   text-align: left;
   font-size:  100%;
-  width: 100%;
+  width: calc(100% - 7.5px);
 }
+
+#city-field{
+    background-color: A0B3C2;
+    border: 2px solid black;
+    border-radius: 4px;
+    text-align: left;
+    font-size:  100%;
+    width: calc(100% - 7.5px);
+  }
 
 input[type = "radio"]{
   color: A0B3C2;
@@ -90,7 +99,7 @@ input[type = "radio"]{
   font-size:  100%;
 }
 .pass{
-  width:100%;
+  width: calc(100% - 7.5px);
 }
 input[type = "date"]{
   background-color: A0B3C2;
@@ -105,7 +114,7 @@ input[type = "password"]{
   border-radius: 4px;
   font-size: 100%;
   text-align: left;
-  width: 100%;
+
 }
 
 .sign-in-button-item{
