add download, change static

--- a/src/static/css/headpage.css
+++ b/src/static/css/headpage.css
@@ -53,7 +53,7 @@ a{
 }
 
 body {
-     background: url("phone.jpg") no-repeat center center fixed;
+     background: url("/static/image/phone.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
