--- a/src/static/css/profile.css
+++ b/src/static/css/profile.css
@@ -46,7 +46,7 @@ a{
 }
 
 body {
-   background: url("/static/phone.jpg") no-repeat center center fixed;
+   background: url("/static/image/phone.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
@@ -388,7 +388,7 @@ footer{
    line-height: 20px;;
  }
  
- .popup__wrapper {
+ .popup__wrapper, .popup__wrapper-2 {
    padding: 40px;
  }
 
