--- a/src/static/css/headpage.css
+++ b/src/static/css/headpage.css
@@ -3,7 +3,7 @@ html {
    display: flex;
    justify-content: center;
    flex-wrap:wrap; 
-
+   font-family: 'Helvetica';
 
 
 }   
@@ -21,7 +21,11 @@ html {
     margin-top:20px;
 }
 
-
+#logo{
+    width: 80px;;
+    height: 25px;;
+    margin-top:-2px;
+ } 
 .row > a {
     padding: 5px 15px;;
     background-color: #FBCD80 ; 
@@ -30,21 +34,32 @@ html {
     text-align: center; 
 }
 
-.nav-link-1{
-    width: 40px;  
+#qvadrat-1{
+    height: 125px;;;
 }
 
+#qvadrat-2{
+    height: 125px;;;
+}
+
+#qvadrat-3{
+    height: 105px;;;
+}
+
+#qvadrat-4{
+    height: 105px;;;
+}
 .nav-link-2{
-    width: 130px;
+    width: 130px;height: 20px;
 }
 
 .nav-link-3{
-    width: 140px;
+    width: 140px;height: 20px;
     
 }
 
 .nav-link-4{
-    width: 130px;;
+    width: 130px;;height: 20px;
 }
 
 .hidden-button{
@@ -93,22 +108,22 @@ body {
 }
 
 .head-1 {font-size: 110px;;
-    font-family: "Arial";
+   
     padding-top: 3  px;;
     overflow-wrap: break-word; 
     padding-left: 20px;; 
 }
 
 .line-1{
-    font-size: 68px; margin-top: -100px;;font-family: "Arial";overflow-wrap: break-word;padding-left: 20px;; 
+    font-size: 68px; margin-top: -100px;;;overflow-wrap: break-word;padding-left: 20px;; 
 }
 
 .text-1{
-    font-size: 31px; margin-top: -30px;;font-family: "Arial"; line-height: 50px;padding-left: 20px;; 
+    font-size: 31px; margin-top: -30px;;; line-height: 50px;padding-left: 20px;; 
 }
 
 .head-2 {
-    font-family: "Arial";
+    
     padding-top: 30px;;
     overflow-wrap: break-word; 
     text-align: center; 
