--- a/src/static/css/login.css
+++ b/src/static/css/login.css
@@ -4,14 +4,20 @@
     padding: 0;
   }
   
-
+html{
+  font-family: 'Helvetica';
+}
 .form {
     display: flex !important;
     flex-direction: column !important;
 }
 
+#logo{
+  height: 50px;;
+}
 .header1 {
   margin-bottom: 12px;
+  font-size: 32px;;
 }
 
 #mail-field {
