--- a/src/static/css/profile.css
+++ b/src/static/css/profile.css
@@ -4,8 +4,14 @@ html {
    display: flex;
    justify-content: center;
    flex-wrap:wrap; 
+   font-family: 'Helvetica';
 }
 
+#logo{
+   width: 80px;;
+   height: 25px;;
+   margin-top:-2px;
+} 
 
 .row{
     width: 1360px;  
@@ -25,20 +31,23 @@ html {
 }
 
 .nav-link-1{
-   width: 40px;  
+   width: 80px;height: 20px;
+
 }
 
+
 .nav-link-2{
-   width: 130px;
+   width: 140px;
+   height: 20px;
 }
 
 .nav-link-3{
    width: 140px;
-   
+   height: 20px;
 }
 
 .nav-link-4{
-   width: 130px;;
+   width: 130px;;height: 20px;
 }
 
 .hidden-button{
@@ -76,6 +85,7 @@ body {
    padding-left: 20px;
    font-size: 50px;
    line-height: 20px;
+   display: inline-block;
 }
 
 .results{
@@ -115,6 +125,12 @@ body {
 
 
 }
+
+.subscriptions-list{
+
+   display: flex;
+   justify-content: space-between;
+}
 .contacts{border-radius: 8px;;
    color: #FFFFFF;
    background-color: #19272A ;
@@ -144,7 +160,7 @@ body {
    text-align: left;
    background-color: #19272A ;
    width: calc(50% - 20px - 20px);
-   font-size: 28px;height: 100%;
+   font-size: 28px;
 }
 
 ul{
@@ -174,6 +190,9 @@ ul{
    margin-top: 20px;;
 }
 
+#last_name_sub{
+   margin-top: -20px;;
+}
 .Subscribers-name{
    margin-top: 0px;;
    font-size: 20px;;
@@ -239,11 +258,26 @@ ul{
    width: 320px;;
 }
 
-.files{
-   width: 300px;;
-   margin-left:20px;
 
+
+.files-list-item {
+   direction: ltr;
+   display: inline-block;
+   word-break: break-all;
+   height: 100%;
+   overflow-y: scroll;
+   overflow-x: hidden;
+   width: 600px;
 }
+
+/* Стили для скрытия скроллбара */
+.files-list-item::-webkit-scrollbar {
+   width: 0; /* Скрыть скроллбар */
+   height: 0; /* Скрыть горизонтальный скроллбар (если нужен) */
+}
+
+
+
 
 .active {
    color:#000;
@@ -256,6 +290,7 @@ ul{
    background-color: #19272A ;
    height: 680px;;
    width: 860px;;
+   margin-left:20px;
 
    margin-top:20px;
 }
@@ -264,7 +299,7 @@ ul{
    background-color: #FBCD80;
    color:#000;font-size: 20px;
    float: right;
-   margin-top:30px;
+   margin-top:14px;
    border-radius: 4px;;
    padding: 10px;;
    margin-right:20px;
@@ -286,14 +321,16 @@ color:#000;padding: 10px;
 margin-top:48.5px;  margin-left:12px; border-radius: 4px;;
 }
 
-.files-list-item{display: inline-block;word-break:Break-all;
 
-}
 
 .file-item{
    font-size: 24px;background-color: #FBCD80;;;color:#000;border-radius: 4px;;padding: 10px;;margin-top: 14px;;
-   margin-left:20px;
-   width: 800px;;word-break:Break-all;
+   margin-left:50px;
+   width: 500px;;word-break:Break-all;
+}
+
+.file-name{
+   text-align: left;;
 }
 
 #clear{
@@ -323,10 +360,25 @@ footer{
    float:right;
    margin-top:-50px;
    margin-right:20px;
+   font-family: 'Helvetica';
 }
 
-
-
+#make-sub {
+   background-color: #19272A ;
+   color:#FFFFFF;
+   padding: 15px;;border-radius: 4px;
+   float:right;
+   margin-top:-50px;
+   margin-right:20px;font-family: 'Helvetica';
+}
+#refuse-sub{
+   background-color: #19272A ;
+   color:#FFFFFF;
+   padding: 15px;;border-radius: 4px;
+   float:right;
+   margin-top:-50px;
+   margin-right:20px;font-family: 'Helvetica';
+}
 
 .edit-main-info{color:#000;
    text-align: center;
