--- a/src/static/css/registration.css
+++ b/src/static/css/registration.css
@@ -4,7 +4,7 @@ html {
   height: 100vh;
   width:100vw;
   display: flex;
-  justify-content: center;
+  justify-content: center; font-family: 'Helvetica';
   align-items:center;
 }
 
