--- a/src/static/css/search.css
+++ b/src/static/css/search.css
@@ -1,4 +1,6 @@
-
+html {
+    font-family: 'Helvetica';
+}
 /*! начало*/
 .form_label {
     position: relative;
@@ -14,6 +16,11 @@
     line-height: 16px;
     letter-spacing: 0.04em;
     color: #686ea1;
+  }
+
+  .form-styles {
+    display: flex;
+    flex-direction: column;
   }
   
   .form_text:after {
@@ -50,18 +57,11 @@
   .multiselect_block-1 {
     position: relative;
     display: flex;
-    width: 51px;
+    width: 100px;
     margin-left: auto;
-    background-image: url("../image/filter.svg");
+    background: url("/static/image/filter.svg") no-repeat;
     background-color: #FBCD80;
   }
-  
-  
-  
-  
-  
-  
-  
   
   
   /*! конец*/
@@ -73,7 +73,7 @@
       padding-bottom: auto;
       height: 48px;
       box-sizing: border-box;
-      font-family: Georgia, 'Times New Roman', Times, serif;
+
       background: #FBCD80;
       font-weight: 500;
       font-size: 16px;
@@ -100,6 +100,10 @@
   }
   
   
+span{
+    margin-right: 5px;
+}
+
   .main-header{ position: sticky;
       top:10px;
   }
@@ -112,8 +116,10 @@
       text-align: center; 
   }
   
+ 
   .nav-link-1{
       width: 150px;  
+      
   }
   
   .nav-link-2{
@@ -140,7 +146,7 @@
   }
   
   body {
-       background: url("../image/phone.jpg") no-repeat center center fixed;
+       background: url("/static/image/phone.jpg") no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
@@ -168,6 +174,12 @@
       
   }
   
+  .hidden-button{
+    display:none;
+ }
+ 
+
+
   .main-info-3{
       width: 100%;
       border-radius: 4px;;
@@ -178,22 +190,22 @@
   }
   
   .head-1 {font-size: 110px;;
-      font-family: "Arial";
+
       padding-top: 30px;;
       overflow-wrap: break-word; 
       padding-left: 20px;; 
   }
   
   .line-1{
-      font-size: 68px; margin-top: -100px;;font-family: "Arial";overflow-wrap: break-word;padding-left: 20px;; 
+      font-size: 68px; margin-top: -100px;;overflow-wrap: break-word;padding-left: 20px;; 
   }
   
   .text-1{
-      font-size: 31px; margin-top: -30px;;font-family: "Arial"; line-height: 50px;padding-left: 20px;; 
+      font-size: 31px; margin-top: -30px;; line-height: 50px;padding-left: 20px;; 
   }
   
   .head-2 {
-      font-family: "Arial";
+
       padding-top: 30px;;
       overflow-wrap: break-word; 
       text-align: center; 
@@ -314,6 +326,7 @@
   
   .section {
       margin-left: 10px;
+      display: flex;
   }
   
   p {
@@ -325,7 +338,19 @@
       font-size: 24px;
       line-height: 36px;
       font-weight: 500;
-      margin-bottom: 3px;
+      margin-bottom: auto;
+      margin-top: auto;
+  }
+
+  .search-button {
+    position: relative;
+    display: flex;
+    margin: 5px;
+    width: 100px;
+    margin-left: auto;
+    background: url("/static/image/lupa.svg") no-repeat;
+    background-size: contain;
+    background-color: #FBCD80;
   }
   
   .small-info {
